# weatherapp

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: ai-repo-infra.yml  bug-report.yml  config.yml  feature-request.yml
.github/extensions/weatherapp-local-tester/: extension.mjs
.github/skills/weatherapp-local-preflight/: SKILL.md
.github/workflows/: images.yml  release-chart.yml  test.yml
agents/: weatherapp-code-review.agent.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/weather_api/: config.py  main.py  models.py
backend/src/weather_api/clients/: __init__.py  nws.py
backend/src/weather_api/services/: __init__.py  cache.py  golf.py  lawn.py  weather.py
backend/src/weather_api/telemetry/: __init__.py  metrics.py
backend/tests/: test_cache.py  test_recommendations.py  test_weather_normalization.py
deploy/chart/weatherapp/: Chart.yaml  values.yaml
deploy/chart/weatherapp/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  configmap.yaml  ingress.yaml  namespace.yaml  servicemonitor.yaml  web-deployment.yaml  web-service.yaml
docs/: api.md  architecture.md  operations.md
frontend/: Dockerfile  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  api.ts  index.css  types.ts
observability/: grafana-dashboard.json
